# OpenUSD

./: .appveyor.yml  .gitattributes  .gitignore  .travis.yml  BUILDING.java.md  BUILDING.m-js.js  BUILDING.md  BUILDING_MAC.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  ISSUES.md  ISSUE_TEMPLATE.md  LICENSE.txt  NOTICE.txt  PULL_REQUEST_TEMPLATE.md  Package.resolved  Package.swift  README.md  SECURITY.md  VERSIONS.md  appveyor.yml  azure-pipelines.yml  azure-pypi-pipeline.yml  build_ios.sh  dummy_file
extras/usd/examples/: CMakeLists.txt
extras/usd/js_bindings/: CMakeLists.txt  create_es6_module.cmake
extras/usd/tutorials/: CMakeLists.txt  README.md
pxr/: CMakeLists.txt  USD.natvis  module.modulemap  pxr.h  pxr.h.in  pxrConfig.cmake.in
pxr/base/: CMakeLists.txt
pxr/base/arch/: CMakeLists.txt  align.cpp  align.h  api.h  arch.h  assumptions.cpp  attributes.cpp  attributes.h  buildMode.h  daemon.cpp  daemon.h  debugger.cpp  debugger.h  defines.h  demangle.cpp  demangle.h  env.cpp  env.h  errno.cpp  errno.h  error.cpp  error.h  export.h  fileSystem.cpp  fileSystem.h  function.cpp  function.h  functionLite.h  hash.cpp  hash.h  hints.h  initConfig.cpp  inttypes.h  library.cpp  library.h  mallocHook.cpp  mallocHook.h  math.h  module.modulemap  overview.dox  (+25 more)
pxr/base/gf/: CMakeLists.txt  __init__.py  api.h  bbox3d.cpp  bbox3d.h  camera.cpp  camera.h  color.cpp  color.h  colorSpace.cpp  colorSpace.h  colorSpace_data.h  declare.h  dualQuat.template.cpp  dualQuat.template.h  dualQuatd.cpp  dualQuatd.h  dualQuatf.cpp  dualQuatf.h  dualQuath.cpp  dualQuath.h  emscriptenRegistrationHelper.h  frustum.cpp  frustum.h  gamma.cpp  gamma.h  gf.h  gfGenCode.py  gfmath.cpp  gfmath.h  half.cpp  half.h  homogeneous.cpp  homogeneous.h  ilmbase_half.README  ilmbase_half.cpp  ilmbase_half.h  ilmbase_half.patch  ilmbase_halfLimits.h  interval.cpp  (+171 more)
pxr/base/js/: CMakeLists.txt  api.h  converter.h  js.h  json.cpp  json.h  module.modulemap  overview.dox  pch.h  types.h  utils.cpp  utils.h  value.cpp  value.h
pxr/base/lib/: CMakeLists.txt
pxr/base/pegtl/: CMakeLists.txt  README.md  build-workaround.cpp  pegtl.hpp
pxr/base/plug/: CMakeLists.txt  __init__.py  api.h  debugCodes.cpp  debugCodes.h  info.cpp  info.h  initConfig.cpp  interfaceFactory.cpp  interfaceFactory.h  module.cpp  module.modulemap  moduleDeps.cpp  notice.cpp  notice.h  overview.dox  pch.h  plug.h  plugin.cpp  plugin.h  registry.cpp  registry.h  staticInterface.cpp  staticInterface.h  testPlug.py  testPlugBase.cpp  testPlugBase.h  thisPlugin.h  wrapNotice.cpp  wrapPlugin.cpp  wrapRegistry.cpp  wrapTestPlugBase.cpp
pxr/base/tf/: CMakeLists.txt  __init__.py  anyUniquePtr.cpp  anyUniquePtr.h  anyWeakPtr.cpp  anyWeakPtr.h  api.h  atomicOfstreamWrapper.cpp  atomicOfstreamWrapper.h  atomicRenameUtil.cpp  atomicRenameUtil.h  bigRWMutex.cpp  bigRWMutex.h  bitUtils.cpp  bitUtils.h  bits.cpp  bits.h  callContext.h  compressedBits.cpp  compressedBits.h  cxxCast.h  debug.cpp  debug.h  debugCodes.cpp  debugCodes.h  debugNotice.cpp  debugNotice.h  declarePtrs.h  delegatedCountPtr.h  denseHashMap.cpp  denseHashMap.h  denseHashSet.cpp  denseHashSet.h  diagnostic.cpp  diagnostic.h  diagnosticBase.cpp  diagnosticBase.h  diagnosticHelper.cpp  diagnosticHelper.h  diagnosticLite.h  (+243 more)
pxr/base/trace/: CMakeLists.txt  __init__.py  __main__.py  aggregateNode.cpp  aggregateNode.h  aggregateTree.cpp  aggregateTree.h  aggregateTreeBuilder.cpp  aggregateTreeBuilder.h  api.h  category.cpp  category.h  collection.cpp  collection.h  collectionNotice.cpp  collectionNotice.h  collector.cpp  collector.h  concurrentList.h  counterAccumulator.cpp  counterAccumulator.h  customCallback.cpp  customCallback.h  dataBuffer.cpp  dataBuffer.h  dynamicKey.cpp  dynamicKey.h  event.cpp  event.h  eventContainer.cpp  eventContainer.h  eventData.cpp  eventData.h  eventList.cpp  eventList.h  eventNode.cpp  eventNode.h  eventTree.cpp  eventTree.h  eventTreeBuilder.cpp  (+34 more)
pxr/base/ts/: CMakeLists.txt  README.md  TsTest_Baseliner.py  TsTest_Comparator.py  TsTest_CompareBaseline.py  TsTest_Grapher.py  TsTest_MayapyDriver.py  TsTest_MayapyEvaluator.py  __init__.py  api.h  binary.cpp  binary.h  data.cpp  data.h  debugCodes.cpp  debugCodes.h  diff.cpp  diff.h  eval.cpp  eval.h  evalCache.cpp  evalCache.h  evalUtils.cpp  evalUtils.h  evaluator.h  keyFrame.cpp  keyFrame.h  keyFrameMap.cpp  keyFrameMap.h  keyFrameUtils.cpp  keyFrameUtils.h  knot.cpp  knot.h  knotData.cpp  knotData.h  knotMap.cpp  knotMap.h  loopParams.cpp  loopParams.h  mathUtils.cpp  (+60 more)
pxr/base/vt/: CMakeLists.txt  __init__.py  api.h  array.cpp  array.h  arrayPyBuffer.cpp  arrayPyBuffer.h  dictionary.cpp  dictionary.h  functions.h  hash.cpp  hash.h  module.cpp  module.modulemap  moduleDeps.cpp  operators.h  overview.dox  pch.h  pyOperators.h  streamOut.cpp  streamOut.h  traits.h  typeHeaders.h  types.cpp  types.h  value.cpp  value.h  valueFromPython.cpp  valueFromPython.h  visitValue.h  vt.h  wrapArray.cpp  wrapArray.h  wrapArrayBase.cpp  wrapArrayDualQuaternion.cpp  wrapArrayFloat.cpp  wrapArrayIntegral.cpp  wrapArrayMatrix.cpp  wrapArrayQuaternion.cpp  wrapArrayRange.cpp  (+5 more)
pxr/base/work/: CMakeLists.txt  __init__.py  api.h  arenaDispatcher.h  detachedTask.cpp  detachedTask.h  dispatcher.cpp  dispatcher.h  loops.cpp  loops.h  module.cpp  module.modulemap  moduleDeps.cpp  overview.dox  pch.h  reduce.cpp  reduce.h  singularTask.cpp  singularTask.h  sort.h  threadLimits.cpp  threadLimits.h  utils.cpp  utils.h  withScopedParallelism.h  work.h  wrapThreadLimits.cpp
pxr/imaging/: CMakeLists.txt
pxr/imaging/cameraUtil/: CMakeLists.txt  __init__.py  api.h  conformWindow.cpp  conformWindow.h  framing.cpp  framing.h  module.cpp  moduleDeps.cpp  pch.h  screenWindowParameters.cpp  screenWindowParameters.h  wrapConformWindow.cpp  wrapFraming.cpp  wrapScreenWindowParameters.cpp
pxr/imaging/garch/: CMakeLists.txt  __init__.py  api.h  gl.h  glApi.cpp  glApi.h  glDebugWindow.cpp  glDebugWindow.h  glPlatformContext.h  glPlatformContextGLX.h  (+21 more)
pxr/usd/: CMakeLists.txt
pxr/usdImaging/: CMakeLists.txt
(+13076 files in other folders)
