add_subdirectory(garch)
add_subdirectory(hf)
add_subdirectory(hio)
add_subdirectory(cameraUtil)
add_subdirectory(pxOsd)
add_subdirectory(geomUtil)
add_subdirectory(glf)
add_subdirectory(hgi)
add_subdirectory(hgiGL)
add_subdirectory(hgiMetal)
add_subdirectory(hgiVulkan)
add_subdirectory(hgiInterop)
add_subdirectory(hd)
add_subdirectory(hdar)
add_subdirectory(hdGp)
add_subdirectory(hdsi)

if (${PXR_ENABLE_MATERIALX_SUPPORT})
    add_subdirectory(hdMtlx)
endif()

if (${PXR_ENABLE_OPENVDB_SUPPORT})
    add_subdirectory(hioOpenVDB)
endif()

add_subdirectory(hdSt)
add_subdirectory(hdx)
add_subdirectory(plugin)
